<resources>
    <string name="app_name">Meetp</string>
    <string name="version">Version %1$s</string>
    <string name="ok">OK</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="errEmailRequired">Enter email</string>
    <string name="errMeetingCode">Enter meeting id</string>
    <string name="errMeetingCodeInValid">Enter valid meeting id</string>
    <string name="errMeetingSubject">Enter meeting subject</string>
    <string name="errValidEmailRequired">Enter valid email</string>
    <string name="errPasswordRequired">Enter password</string>
    <string name="errPasswordTooShort">Password too short, enter minimum 6 characters!</string>
    <string name="err_internet">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="verify">Verify</string>
    <string name="menu_home">Home</string>
    <string name="exit">Repeat this action to exit app</string>
    <string name="menu_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="err_mobile">Enter mobile</string>
    <string name="err_title">Enter title</string>
    <string name="err_valid_mobile">Enter valid mobile</string>
    <string name="email_exists">Email already exists</string>
    <string name="mobile_does_not_exists">Mobile doesn\'t exists</string>
    <string name="err_name">Enter name</string>
    <string name="permission_msg">This app needs permission to use some features. You can grant them in app settings.</string>
    <string name="permission_msg_never_checked">You have denied some permissions. Allow permissions from app settings.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="yes_grant_permission">Yes, Grant permission(s)</string>
    <string name="no">No</string>
    <string name="select_image">Select Image</string>
    <string name="from_camera">From Camera</string>
    <string name="pick_from_gallery">From Gallery</string>
    <string name="processing_image">Processing image</string>
    <string name="crop">Crop</string>
    <string name="uploading_image">Uploading image</string>
    <string name="no_history_found">History not available</string>
    <string name="no_events_found">Schedule not available</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_duration">Select duration</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="authenticating">Authenticating...</string>
    <string name="please_wait">Please wait...</string>
    <string name="failed_to_sent_email">Failed to send reset email!</string>
    <string name="we_have_sent_instructions">We have sent you instructions to reset your password!</string>
    <string name="new_meeting">New Meeting</string>
    <string name="meeting_code">Meeting ID</string>
    <string name="meeting_history">History</string>
    <string name="subject">Subject</string>
    <string name="calendar">Calendar</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="join">Join Meeting</string>
    <string name="rejoin">Rejoin</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="continue_meeting">Continue</string>
    <string name="meeting_not_exist">Meeting doesn\'t exist.</string>
    <string name="start">Start</string>
    <string name="meeting_saved">Meeting Saved</string>
    <string name="meeting_scheduled">Meeting Scheduled</string>

<!--    <string name="app_id">ca-app-pub-9530431913684433~9725700609</string>-->
    <string name="meet_banner">ca-app-pub-9530431913684433/2722212514</string>

    <string name="app_id">ca-app-pub-9530431913684433~9725700609</string>

<!--    <string name="meet_interstitial">ca-app-pub-9530431913684433/8428645390</string>-->
<!--    <string name="meet_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="done">Done</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="update_now">Update Now</string>
    <string name="or_continue_with">OR continue with</string>
    <string name="explore">Explore</string>
    <string name="no_explore_found">Explore not available</string>
    <string name="title_activity_video_play_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
