<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />

<!--        <item-->
<!--            android:id="@+id/nav_explore"-->
<!--            android:icon="@drawable/ic_outline_explore_24"-->
<!--            android:visible="true"-->
<!--            android:title="@string/explore" />-->

<!--        <item-->
<!--            android:id="@+id/nav_meeting_history"-->
<!--            android:icon="@drawable/ic_history"-->
<!--            android:title="@string/meeting_history" />-->

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:visible="false"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/menu_settings" />
    </group>

</menu>
