<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg"
    android:fitsSystemWindows="true"
    tools:context="network.oversee.buttin.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:elevation="0dp"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_position="top">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="0dp"
            app:diagonal_direction="left"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_position="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circleIndicator"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:ci_drawable="@drawable/ic_circle_selected"
                app:ci_drawable_unselected="@drawable/ic_circle_deselected" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnJoin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/join_a_meeting"
                    android:stateListAnimator="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:rippleColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:stateListAnimator="@null"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="5dp"
                        app:elevation="0dp"
                        app:rippleColor="@color/colorPrimaryRipple" />

                    <View
                        android:layout_width="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:stateListAnimator="@null"
                        android:text="@string/signin"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="5dp"
                        app:elevation="0dp"
                        app:rippleColor="@color/colorPrimaryRipple" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
